--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>HutCrib</title>
 
     <link rel="shortcut icon" href="./imgs/logo.png" type="image/x-icon" />
-    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
     <main>
